# cloud-data-engineer

./: .gitignore  README.md  aws_data_engineer.md  azure_core_data_concepts.md  azure_microsoft_az_sql.md  core_infrastructure.md
ai-900-azure-ai-fundamentals/: ai-900.md
aws-dea-c01/: analytics.md  dea_notes.md  integration.md  machine_learning.md  management_governance.md  migration_transfer.md  security_identiy_compliance.md  storage.md
az-900-azure-fundamentals/: az-900.md  vm_init.sh
azure-data-enineering-dp-203/: azure_de.md
azure-data-enineering-dp-203/data-modeling/: data_modeling.md  l1-demo-0-creating-a-table-with-postgres.ipynb
dp-203-azure-data-enineering/: azure_de.md
dp-203-azure-data-enineering/data-warehouse/bike-share/: data_to_postgres.py  overview.md  pyproject.toml
dp-203-azure-data-enineering/data-warehouse/bike-share/scripts/: dim_date.sql  dim_rider.sql  dim_station.sql  fact_payment.sql  fact_trip.sql  staging_payment.sql  staging_rider.sql  staging_station.sql  staging_trip.sql  star_schema_pg.sql
dp-203-azure-data-enineering/data-warehouse/bike-share/solutions/: task_1.md  task_2.md  task_3.md  task_4.md  task_5.md  task_6.md
dp-900-azure-data-fundamentals/: dp-900.md
exam_prep_dea_c01/: README.md  flash_cards.md  practice_01.md  practice_02.md  practice_03.md  practice_04.md  practice_05.md  practice_06.md  practice_07.md  practice_08.md  practice_09.md
gcp-data-engineer/: airflow.cfg  airflow.md  docker-compose.yaml
solution-architect/: aws_solutions_architectu_associate.md  connection.py
(+36 files in other folders)
